# mc-coop-map

./: .gitignore  beet.yml  pyproject.toml
src/: definitions.py  wave_definition.py
src/data/coop/damage_type/: poison.json
src/data/coop/enchantment/: narrower_multishot.json  weapon_plague_volley.json
src/data/coop/modules/: helpers.bolt  loot_tables.bolt  main.bolt  reload.bolt  spec_itemstacks.bolt  upgrade_book_contents.bolt
src/data/coop/modules/weapon/: blasthra.bolt  iron_tempest.bolt  plague_volley.bolt
