[project]
name = "mc-coop-dp-beet"
version = "0.1.0"
description = ""
authors = [{ name = "Amy Opas", email = "amy.opas@proton.me" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beet (>=0.112.0,<0.113.0)",
    "mecha (>=0.99.0,<0.100.0)",
    "bolt (>=0.49.2,<0.50.0)",
    "bolt-expressions (>=0.18.0,<0.19.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
